--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,27 @@
 {
   "compilerOptions": {
     "types": ["vite/client"],
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "target": "es2020", 
-    "jsx": "react-jsx",
     "module": "ES2020",
-    "moduleResolution": "Bundler", 
-    "noEmit": true,
-    "isolatedModules": true, 
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "allowImportingTsExtensions": true,
     "allowJs": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+      /* Bundler mode */
+      "moduleResolution": "Bundler",
+      "allowImportingTsExtensions": true,
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "noEmit": true,
+      "jsx": "react-jsx",
+  
+      /* Linting */
+      "strict": true,
+      "strictPropertyInitialization": false,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "noFallthroughCasesInSwitch": true
+  },
 }
